2003-07-11  Zoltan Varga  <vargaz@freemail.hu>

	* AssemblyFlagsAttribute.cs: Added new constructor from NET 1.1.

	* AssemblyFlagsAttribute.cs: Added new property from NET 1.1.

2003-07-10  Zoltan Varga  <vargaz@freemail.hu>

	* Assembly.cs: Implemented ImageRuntimeVersion property from NET 1.1.

Mon Jun 30 19:12:08 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* Pointer.cs: implemented.

2003-06-15  Zoltan Varga  <vargaz@freemail.hu>

	* EventInfo.cs: Implement IsSpecialName.

2003-06-10  Zoltan Varga  <vargaz@freemail.hu>

	* Module.cs (Mono_GetGuid): New method to return the GUID of the
	module.

2003-05-21  Zoltan Varga  <vargaz@freemail.hu>

	* Module.cs: Implement GetField and its friends.

2003-05-20  Zoltan Varga  <vargaz@freemail.hu>

	* Assembly.cs (GetManifestResourceStream): Moved handling of 
	linked resources into managed code using the newly implemented
	GetManifestResourceInfo () method.

2003-05-19  Zoltan Varga  <vargaz@freemail.hu>

	* Module.cs: Implemented IsResource.

	* Assembly.cs: Implemented GetManifestResourceInfo, GetModules,
	GetModule, GetLoadedModules methods.
	* Assembly.cs (GetManifestResourceStream): Added support for 
	resources in extern assemblies.

2003-05-13  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Assembly.cs: fixed bug #42833.

2003-05-11  Miguel de Icaza  <miguel@ximian.com>

	* Binder.cs (ChangeType): Very simplistic change.  Am not sure if
	it is correct, but it makes RemotingCorba move along a bit more
	(Remoting.Corba invokes Binder.ConvertArgs, which calls
	Binder.ChangeType with an Attribute [] to Object []).

2003-05-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Binder.cs:
	(check_type): fixed bug #41655.

2003-05-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Assembly.cs: implemented GetSatelliteAssembly.

Fri Apr 11 13:06:10 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* Assembly.cs: added GetNamespaces() icall.

2003-03-17  Zoltan Varga  <vargaz@freemail.hu>
