@@ -16,58 +16,46 @@ using System.Runtime.InteropServices;
 
 namespace System.Reflection {
 	
-	internal struct MonoFieldInfo {
-		public Type parent;
-		public Type type;
-		public String name;
-		public FieldAttributes attrs;
-		
-		[MethodImplAttribute(MethodImplOptions.InternalCall)]
-		internal static extern void get_field_info (MonoField field, out MonoFieldInfo info);
-	}
-
-	internal class MonoField : FieldInfo {
+	internal sealed class MonoField : FieldInfo {
 		internal IntPtr klass;
 		internal RuntimeFieldHandle fhandle;
+		string name;
+		Type type;
+		FieldAttributes attrs;
 		
 		public override FieldAttributes Attributes {
 			get {
-				MonoFieldInfo info;
-				MonoFieldInfo.get_field_info (this, out info);
-				return info.attrs;
+				return attrs;
 			}
 		}
 		public override RuntimeFieldHandle FieldHandle {
-			get {return fhandle;}
+			get {
+				return fhandle;
+			}
 		}
 
 		public override Type FieldType { 
 			get {
-				MonoFieldInfo info;
-				MonoFieldInfo.get_field_info (this, out info);
-				return info.type;
+				return type;
 			}
 		}
 
+		[MethodImplAttribute(MethodImplOptions.InternalCall)]
+		private extern Type GetParentType (bool declaring);
+
 		public override Type ReflectedType {
 			get {
-				MonoFieldInfo info;
-				MonoFieldInfo.get_field_info (this, out info);
-				return info.parent;
+				return GetParentType (false);
 			}
 		}
 		public override Type DeclaringType {
 			get {
-				MonoFieldInfo info;
-				MonoFieldInfo.get_field_info (this, out info);
-				return info.parent;
+				return GetParentType (true);
 			}
 		}
 		public override string Name {
 			get {
-				MonoFieldInfo info;
-				MonoFieldInfo.get_field_info (this, out info);
-				return info.name;
+				return name;
 			}
 		}
 
@@ -91,9 +79,7 @@ namespace System.Reflection {
 		}
 
 		public override string ToString () {
-			MonoFieldInfo info;
-			MonoFieldInfo.get_field_info (this, out info);
-			return String.Format ("{0} {1}", info.type, info.name);
+			return String.Format ("{0} {1}", type, name);
 		}
 
 		[MethodImplAttribute(MethodImplOptions.InternalCall)]
@@ -105,7 +91,7 @@ namespace System.Reflection {
 				throw new ArgumentNullException ("obj");
 			if (binder == null)
 				binder = Binder.DefaultBinder;
-			object realval = binder.ChangeType (val, FieldType, culture);
+			object realval = binder.ChangeType (val, type, culture);
 			SetValueInternal (this, obj, realval);
 		}
 	}
